# compression

./: .gitignore  analyze.py  analyze.sh  batch_test1.sh  cleanup.sh  compress.sh  count_zeros.sh  hi.py  lz4_compress.sh  plot.py  plot0.py  plot1.py  plot2.py  plot3.py  run.py  run_all.sh  workload.sh  zstd_compress.sh
count_zeros/: Cargo.toml
plot/: ctest4.py  ctest5.py  ctest6.py  rep6.py
redis-loader/: Cargo.toml  config.json
redis-loader/src/: lib.rs  main.rs
run/: ctest4.py  ctest5.py  ctest6.py  ctest7.py  ctest8.py
utils/: build.sh  config.py  coordinator.py  misc.py  scripts.py
utils/bash/: build.sh  dump.sh  flush.sh
utils/compress/: Cargo.toml
utils/compress/src/: lib.rs
utils/redis/: dump.sh  flush.sh
utils/redis-loader/: Cargo.toml
utils/redis-loader/src/: lib.rs
utils/zero-counter/src/: main.rs
utils/zstd/: Cargo.toml
utils/zstd/src/: main.rs
zero-counter/: Cargo.toml
zero-counter/src/: main.rs
