[package]
name = "redis-loader"
version = "0.1.0"
authors = ["Keith Zhang <keithohno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.16.0"
rand = "0.7"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"